syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "StateServer";

package user;

service User {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc AddUser(UserMessage) returns (GenericResponse);
    rpc DeleteUser(UserIdMessage) returns (GenericResponse);
    rpc GetUsers(google.protobuf.Empty) returns(UserListMessage);
    rpc ModifyUser(UserMessage) returns (GenericResponse);
    rpc GetUsername(UserIdMessage) returns (GenericResponse);
}

message UserMessage {
    int32 id = 1;
    string username = 2;
    string password = 3;
    bool isDeleted = 4;
}

message UserListMessage {
    repeated UserMessage users = 1;
}

message UserIdMessage {
    int32 id = 1;
}

message GenericResponse {
    bool ok = 1;
    string messsage = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool response = 1;
    string loggedUser = 2;
}